--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: go-web-app
+  name: microdegree-service
 spec:
-  type: NodePort
   selector:
-    app: go-web-app
+    app: microdegree
+  type: NodePort
   ports:
-  - port: 80
-    targetPort: 8080
-    nodePort: 31234
-    protocol: TCP
+    - protocol: TCP
+      port: 80        # Port inside cluster
+      targetPort: 8080 # Port your container listens on
+      nodePort: 31234  # External port
